# CLI-Video-Compressor

./: .gitignore  CHANGELOG.md  LICENSE  README.es.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml  testing.yml
pack/: cli.py  constants.py  core.py  helpers.py  utils.py
src/tests/: test_cli.py  test_helpers.py  test_patterns.py
src/vidpack/: cli.py  constants.py  core.py  helpers.py  models.py  utils.py
tests/: test_helpers.py  test_patterns.py
